# winna_winna_chicken_dinna

./: .env  .gitignore  README.md  README_OPTIMIZED.md  data_engine.py  executor.py  fast_math.rs  launch.py  live_paper_trading.py  m1_accelerator.py  macos_patch.py  master_trading_system.ipynb  ml_trading.py  neural_core.py  quick_start.sh  real_trading_launcher.py  real_trading_system.py  requirements.txt  scanner.py  test.sh  test_system.py  test_system_m1.py
backup_20250727_152645/: execution_engine.py  trading_demo.py
backup_20250727_152645/rust_modules/orderbook_engine/src/: lib.rs
backup_20250727_152820/: data_engine.py  execution_engine.py  master_trading_system.ipynb
backup_20250727_152855/: neural_core.py  test.sh
backup_20250727_152855/rust_modules/fast_math/: Cargo.toml
backup_20250727_152855/rust_modules/fast_math/src/: lib.rs
backup_20250727_152855/rust_modules/orderbook_engine/: Cargo.toml
rust_modules/fast_math/src/: lib.rs
