[package]
name = "orderbook_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "orderbook_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }

[target.aarch64-apple-darwin]
rustflags = ["-C", "target-cpu=native"]
